--- a/oficinas_casas/Contraseña.storyboard
+++ b/oficinas_casas/Contraseña.storyboard
@@ -5,6 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
+        <capability name="collection view cell content view" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
@@ -40,34 +41,39 @@
                                 <color key="textColor" red="0.24313725489999999" green="0.28627450980000002" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="djn-r7-DdC">
-                                <rect key="frame" x="36" y="180" width="321" height="112"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Dr5-2u-yAG">
+                                <rect key="frame" x="36" y="180" width="321" height="128"/>
+                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="112" id="b7o-Lp-fZJ"/>
+                                    <constraint firstAttribute="width" secondItem="Dr5-2u-yAG" secondAttribute="height" multiplier="321:128" id="dRf-Iz-m69"/>
                                 </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="gray" title="CORREO"/>
-                            </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ye5-OP-vbJ">
-                                <rect key="frame" x="36" y="300" width="321" height="112"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="112" id="Fsq-S2-hvH"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="gray" title="TELEFONO"/>
-                            </button>
+                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="2Sc-AZ-BkN">
+                                    <size key="itemSize" width="321" height="104"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="S1m-1J-P8a">
+                                        <rect key="frame" x="0.0" y="0.0" width="321" height="104"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="dQ9-yW-PNL">
+                                            <rect key="frame" x="0.0" y="0.0" width="321" height="104"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </collectionViewCellContentView>
+                                        <size key="customSize" width="321" height="104"/>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bi7-0w-h6I"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="Ye5-OP-vbJ" firstAttribute="top" secondItem="djn-r7-DdC" secondAttribute="bottom" constant="8" id="C5m-iQ-Y5o"/>
-                            <constraint firstItem="Ye5-OP-vbJ" firstAttribute="leading" secondItem="bi7-0w-h6I" secondAttribute="leading" constant="36" id="JGj-7m-ioZ"/>
                             <constraint firstItem="8Wy-nP-m90" firstAttribute="leading" secondItem="bi7-0w-h6I" secondAttribute="leading" constant="36" id="OoD-OQ-oQs"/>
+                            <constraint firstItem="Dr5-2u-yAG" firstAttribute="leading" secondItem="bi7-0w-h6I" secondAttribute="leading" constant="36" id="Pu4-Lt-zpQ"/>
                             <constraint firstItem="8Wy-nP-m90" firstAttribute="top" secondItem="bi7-0w-h6I" secondAttribute="top" constant="16" id="Xpi-MH-RFU"/>
-                            <constraint firstItem="bi7-0w-h6I" firstAttribute="trailing" secondItem="djn-r7-DdC" secondAttribute="trailing" constant="36" id="hTJ-2b-D2o"/>
-                            <constraint firstItem="bi7-0w-h6I" firstAttribute="trailing" secondItem="Ye5-OP-vbJ" secondAttribute="trailing" constant="36" id="i9z-Nd-Y78"/>
-                            <constraint firstItem="djn-r7-DdC" firstAttribute="top" secondItem="8Wy-nP-m90" secondAttribute="bottom" constant="71" id="oiG-EV-zQg"/>
-                            <constraint firstItem="djn-r7-DdC" firstAttribute="leading" secondItem="bi7-0w-h6I" secondAttribute="leading" constant="36" id="qno-Kd-hjT"/>
+                            <constraint firstItem="bi7-0w-h6I" firstAttribute="trailing" secondItem="Dr5-2u-yAG" secondAttribute="trailing" constant="36" id="YaV-1Z-HBS"/>
+                            <constraint firstItem="Dr5-2u-yAG" firstAttribute="top" secondItem="8Wy-nP-m90" secondAttribute="bottom" constant="71" id="mS6-iW-oAQ"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Recuperar" style="editor" id="pyA-qd-wYe">
@@ -142,7 +148,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6g-q6-oFr">
-                                <rect key="frame" x="36" y="708" width="321" height="60"/>
+                                <rect key="frame" x="36" y="718" width="321" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="KKK-Vu-Uu6"/>
                                 </constraints>
@@ -163,7 +169,7 @@
                             <constraint firstItem="wPb-af-reI" firstAttribute="top" secondItem="pbV-rT-sXc" secondAttribute="bottom" constant="53" id="Azn-zY-cvc"/>
                             <constraint firstItem="wPb-af-reI" firstAttribute="leading" secondItem="ehE-KX-bY2" secondAttribute="leading" constant="36" id="FkN-U3-uCt"/>
                             <constraint firstItem="ehE-KX-bY2" firstAttribute="trailing" secondItem="l6g-q6-oFr" secondAttribute="trailing" constant="36" id="N7Y-hn-RiY"/>
-                            <constraint firstItem="ehE-KX-bY2" firstAttribute="bottom" secondItem="l6g-q6-oFr" secondAttribute="bottom" constant="50" id="Nz7-hu-ys5"/>
+                            <constraint firstItem="ehE-KX-bY2" firstAttribute="bottom" secondItem="l6g-q6-oFr" secondAttribute="bottom" constant="40" id="Nz7-hu-ys5"/>
                             <constraint firstItem="ehE-KX-bY2" firstAttribute="trailing" secondItem="wPb-af-reI" secondAttribute="trailing" constant="36" id="RST-Kz-eN0"/>
                             <constraint firstItem="pbV-rT-sXc" firstAttribute="leading" secondItem="ehE-KX-bY2" secondAttribute="leading" constant="36" id="YOJ-vh-6Lf"/>
                             <constraint firstItem="pbV-rT-sXc" firstAttribute="top" secondItem="ehE-KX-bY2" secondAttribute="top" constant="16" id="rFi-nD-F6p"/>
@@ -184,7 +190,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7NM-0P-Jb3">
-                                <rect key="frame" x="36" y="732" width="321" height="60"/>
+                                <rect key="frame" x="36" y="742" width="321" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="6vL-2q-VdC"/>
                                 </constraints>
@@ -208,13 +214,13 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nueva contraseña" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ylr-JG-I7Z">
-                                <rect key="frame" x="36" y="98" width="128.33333333333334" height="18.333333333333329"/>
+                                <rect key="frame" x="36" y="98" width="128.33333333333334" height="17.333333333333329"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="14"/>
                                 <color key="textColor" red="0.24313725489999999" green="0.28627450980000002" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="**************" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="WmU-Fv-LYp">
-                                <rect key="frame" x="36" y="125.33333333333331" width="321" height="60"/>
+                                <rect key="frame" x="36" y="124.33333333333331" width="321" height="60"/>
                                 <color key="backgroundColor" red="0.96862745100000003" green="0.97254901959999995" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="e1Y-Wr-M0O"/>
@@ -223,13 +229,13 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Confirmar contraseña" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vsi-zX-sij">
-                                <rect key="frame" x="36" y="205.33333333333334" width="155" height="18"/>
+                                <rect key="frame" x="36" y="204.33333333333334" width="154.66666666666666" height="16.333333333333343"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="14"/>
                                 <color key="textColor" red="0.24313725489999999" green="0.28627450980000002" blue="0.34509803919999998" alpha="1" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="**************" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="IX3-mw-87u">
-                                <rect key="frame" x="36" y="232.33333333333337" width="321" height="60"/>
+                                <rect key="frame" x="36" y="229.66666666666663" width="321" height="60"/>
                                 <color key="backgroundColor" red="0.96862745100000003" green="0.97254901959999995" blue="0.97647058819999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="S7M-MC-wwl"/>
@@ -247,7 +253,7 @@
                             <constraint firstItem="4aV-Z8-VLT" firstAttribute="trailing" secondItem="WmU-Fv-LYp" secondAttribute="trailing" constant="36" id="L0P-qw-VSP"/>
                             <constraint firstItem="Vsi-zX-sij" firstAttribute="leading" secondItem="4aV-Z8-VLT" secondAttribute="leading" constant="36" id="M8e-xG-Iwf"/>
                             <constraint firstItem="RfH-YJ-1Yb" firstAttribute="leading" secondItem="4aV-Z8-VLT" secondAttribute="leading" constant="36" id="P1v-ab-7k5"/>
-                            <constraint firstItem="4aV-Z8-VLT" firstAttribute="bottom" secondItem="7NM-0P-Jb3" secondAttribute="bottom" constant="50" id="S7A-Mb-Vue"/>
+                            <constraint firstItem="4aV-Z8-VLT" firstAttribute="bottom" secondItem="7NM-0P-Jb3" secondAttribute="bottom" constant="40" id="S7A-Mb-Vue"/>
                             <constraint firstItem="IX3-mw-87u" firstAttribute="leading" secondItem="4aV-Z8-VLT" secondAttribute="leading" constant="36" id="aqW-DD-KG7"/>
                             <constraint firstItem="IX3-mw-87u" firstAttribute="top" secondItem="Vsi-zX-sij" secondAttribute="bottom" constant="9" id="ijd-zY-l1J"/>
                             <constraint firstItem="Ylr-JG-I7Z" firstAttribute="top" secondItem="RfH-YJ-1Yb" secondAttribute="bottom" constant="47" id="kmd-PL-Lkd"/>
@@ -273,7 +279,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjc-kC-UHM">
-                                <rect key="frame" x="36" y="732" width="321" height="60"/>
+                                <rect key="frame" x="36" y="742" width="321" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Enx-WU-clR"/>
                                 </constraints>
@@ -315,7 +321,7 @@
                             <constraint firstItem="XsZ-u8-AAg" firstAttribute="trailing" secondItem="tjc-kC-UHM" secondAttribute="trailing" constant="36" id="FW0-bs-KWm"/>
                             <constraint firstItem="HLz-3z-8hF" firstAttribute="centerX" secondItem="FpF-hG-bmx" secondAttribute="centerX" id="VLZ-5G-CPq"/>
                             <constraint firstItem="HLz-3z-8hF" firstAttribute="centerY" secondItem="FpF-hG-bmx" secondAttribute="centerY" id="Xos-71-EhP"/>
-                            <constraint firstItem="XsZ-u8-AAg" firstAttribute="bottom" secondItem="tjc-kC-UHM" secondAttribute="bottom" constant="50" id="d5F-ek-wk9"/>
+                            <constraint firstItem="XsZ-u8-AAg" firstAttribute="bottom" secondItem="tjc-kC-UHM" secondAttribute="bottom" constant="40" id="d5F-ek-wk9"/>
                             <constraint firstItem="odE-i8-9YJ" firstAttribute="centerX" secondItem="FpF-hG-bmx" secondAttribute="centerX" id="f03-7H-8pv"/>
                             <constraint firstItem="HLz-3z-8hF" firstAttribute="top" secondItem="odE-i8-9YJ" secondAttribute="bottom" constant="21" id="h4U-jc-GQE"/>
                             <constraint firstItem="t9W-Wi-Ucw" firstAttribute="top" secondItem="HLz-3z-8hF" secondAttribute="bottom" constant="21" id="tF2-41-7aL"/>
