--- a/oficinas_casas/Contraseña.storyboard
+++ b/oficinas_casas/Contraseña.storyboard
@@ -26,7 +26,7 @@
         <!--Recuperar-->
         <scene sceneID="y4p-y0-Avs">
             <objects>
-                <viewController id="t4y-mf-zas" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="RecuperarViewController" id="t4y-mf-zas" customClass="RecuperarViewController" customModule="oficinas_casas" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ux0-En-Hjf">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -65,6 +65,15 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tCo-We-8DA">
+                                <rect key="frame" x="159" y="409" width="75" height="35"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Button"/>
+                                <connections>
+                                    <segue destination="q6x-bV-VCv" kind="show" id="2sI-sQ-Kb1"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="bi7-0w-h6I"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -89,11 +98,11 @@
             <objects>
                 <viewController id="q6x-bV-VCv" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ZMo-sK-WHf">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="El codigo fue enviado a su movil. El tiempo de duracion del codigo es de 120s. Por favor ingrese el codigo:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pbV-rT-sXc">
-                                <rect key="frame" x="36" y="75" width="235" height="70"/>
+                                <rect key="frame" x="36" y="16" width="235" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="70" id="HUu-Ct-Wqv"/>
                                     <constraint firstAttribute="width" constant="235" id="fVY-8B-hB9"/>
@@ -103,7 +112,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="equalSpacing" spacing="21" translatesAutoresizingMaskIntoConstraints="NO" id="wPb-af-reI">
-                                <rect key="frame" x="36" y="198" width="321" height="60"/>
+                                <rect key="frame" x="36" y="139" width="321" height="60"/>
                                 <subviews>
                                     <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="QL8-Ed-Ti8">
                                         <rect key="frame" x="0.0" y="0.0" width="60" height="60"/>
@@ -148,7 +157,7 @@
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l6g-q6-oFr">
-                                <rect key="frame" x="36" y="718" width="321" height="60"/>
+                                <rect key="frame" x="36" y="742" width="321" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="KKK-Vu-Uu6"/>
                                 </constraints>
@@ -189,20 +198,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7NM-0P-Jb3">
-                                <rect key="frame" x="36" y="742" width="321" height="60"/>
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="60" id="6vL-2q-VdC"/>
-                                </constraints>
-                                <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="filled" title="ACTUALIZAR" cornerStyle="large">
-                                    <fontDescription key="titleFontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="16"/>
-                                    <color key="baseBackgroundColor" red="0.066666666669999999" green="0.32156862749999998" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
-                                </buttonConfiguration>
-                                <connections>
-                                    <segue destination="gSP-v8-Xvu" kind="show" id="u6L-bf-xVt"/>
-                                </connections>
-                            </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tu contraseña debe ser diferente a las utilizadas anteriormente a tu cuenta:" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RfH-YJ-1Yb">
                                 <rect key="frame" x="36" y="16" width="272" height="35"/>
                                 <constraints>
@@ -243,6 +238,20 @@
                                 <fontDescription key="fontDescription" name="Montserrat-Medium" family="Montserrat" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="7NM-0P-Jb3">
+                                <rect key="frame" x="36" y="742" width="321" height="60"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="60" id="6vL-2q-VdC"/>
+                                </constraints>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="ACTUALIZAR" cornerStyle="large">
+                                    <fontDescription key="titleFontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="16"/>
+                                    <color key="baseBackgroundColor" red="0.066666666669999999" green="0.32156862749999998" blue="0.99215686270000003" alpha="1" colorSpace="calibratedRGB"/>
+                                </buttonConfiguration>
+                                <connections>
+                                    <segue destination="gSP-v8-Xvu" kind="presentation" modalPresentationStyle="fullScreen" id="u6L-bf-xVt"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="4aV-Z8-VLT"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
@@ -275,11 +284,11 @@
             <objects>
                 <viewController id="gSP-v8-Xvu" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="FpF-hG-bmx">
-                        <rect key="frame" x="0.0" y="0.0" width="393" height="842"/>
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="tjc-kC-UHM">
-                                <rect key="frame" x="36" y="742" width="321" height="60"/>
+                                <rect key="frame" x="36" y="752" width="321" height="60"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="60" id="Enx-WU-clR"/>
                                 </constraints>
@@ -290,20 +299,20 @@
                                 </buttonConfiguration>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Cambio de contraseña exitoso" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="HLz-3z-8hF">
-                                <rect key="frame" x="54" y="410" width="285" height="22"/>
+                                <rect key="frame" x="54" y="415" width="285" height="22"/>
                                 <fontDescription key="fontDescription" name="Montserrat-Bold" family="Montserrat" pointSize="18"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="like" translatesAutoresizingMaskIntoConstraints="NO" id="odE-i8-9YJ">
-                                <rect key="frame" x="110.33333333333333" y="270" width="172.33333333333337" height="119"/>
+                                <rect key="frame" x="110.33333333333333" y="275" width="172.33333333333337" height="119"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="119" id="Ksg-wJ-wYG"/>
                                     <constraint firstAttribute="width" constant="172.5" id="bo9-3u-MRZ"/>
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Se restablecio exitosamente tu contraseña. Por favor inicie sesion con su nueva contraseña." textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="t9W-Wi-Ucw">
-                                <rect key="frame" x="55.666666666666657" y="453" width="282" height="54"/>
+                                <rect key="frame" x="55.666666666666657" y="458" width="282" height="54"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="282" id="1Lg-9r-wYb"/>
                                     <constraint firstAttribute="height" constant="54" id="PSc-HF-ABf"/>
